@@ -1,3 +1,5 @@
+HEAD
+	+ Add nameserverDelete and nameserverAdded callbacks to NetworkObserver
 3.5.1
 	+ Added defensive code to DNSResolver to avoid ifaces down after crash
 3.5
